Minor restructures for better readability

--- a/pytorch-nn-multiclass-classifier.ipynb
+++ b/pytorch-nn-multiclass-classifier.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prerequisites\n",
+    "* Upload the DL1_Train.pkl file to [YOUR S3 BUCKETNAME]/pytorch-multiclass/data/train/DL1_Train.pkl"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -59,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train & Test data"
+    "### Training & Validation data"
    ]
   },
   {
@@ -79,11 +87,9 @@
    "outputs": [],
    "source": [
     "s3 = boto3.resource('s3')\n",
-    "s3.Bucket(bucketname).download_file('pytorch-multiclass/data/DL1_Train.pkl', '../data/DL1_Train.pkl')\n",
-    "s3.Bucket(bucketname).download_file('pytorch-multiclass/data/DL1_Test.pkl', '../data/DL1_Test.pkl')\n",
+    "s3.Bucket(bucketname).download_file('pytorch-multiclass/data/train/DL1_Train.pkl', '../data/DL1_Train.pkl')\n",
     "\n",
     "final_train = pickle.load( open( \"../data/DL1_Train.pkl\", \"rb\" ), encoding='latin1')\n",
-    "final_test = pickle.load( open( \"../data/DL1_Test.pkl\", \"rb\" ), encoding='latin1')\n",
     "\n",
     "td = {'DRUM & BASS':0, 'R&B':1, 'BLUES':2, 'VOCAL JAZZ':3, 'NATURE SOUNDS':4, 'BAROQUE':5, 'DISNEY':6, 'HARD ROCK':7}\n",
     "\n",
@@ -104,6 +110,28 @@
     "\n",
     "final_val_dataset = data.TensorDataset(torch.from_numpy(X_val), torch.from_numpy(y_val)) \n",
     "final_val_loader = data.DataLoader(final_val_dataset, batch_size=100, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural net\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = nn.Sequential(nn.Flatten(), \n",
+    "                     nn.Dropout(.2), \n",
+    "                     nn.Linear(4096, 1024), \n",
+    "                     nn.ReLU(),\n",
+    "                     nn.BatchNorm1d(1024), \n",
+    "                     nn.Dropout(.5), \n",
+    "                     nn.Linear(1024, 8))"
    ]
   },
   {
@@ -136,28 +164,6 @@
     "        y = y.to(device)\n",
     "        metric.add(d2l.accuracy(net(X), y), d2l.size(y))\n",
     "    return metric[0] / metric[1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Neural net\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = nn.Sequential(nn.Flatten(), \n",
-    "                     nn.Dropout(.2), \n",
-    "                     nn.Linear(4096, 1024), \n",
-    "                     nn.ReLU(),\n",
-    "                     nn.BatchNorm1d(1024), \n",
-    "                     nn.Dropout(.5), \n",
-    "                     nn.Linear(1024, 8))"
    ]
   },
   {
@@ -224,58 +230,6 @@
    "source": [
     "%%time\n",
     "train_model(net, final_train_loader, final_val_loader, num_epochs = 70)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Batch prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_X = np.array(final_test[\"test_data\"])\n",
-    "final_X = torch.from_numpy(final_X).to(d2l.try_gpu())\n",
-    "\n",
-    "preds = torch.argmax(net(final_X), axis=1).type(torch.long)\n",
-    "\n",
-    "genre_list = [\n",
-    "    \"DRUM & BASS\",\n",
-    "    \"R&B\",\n",
-    "    \"BLUES\",\n",
-    "    \"VOCAL JAZZ\",\n",
-    "    \"NATURE SOUNDS\",\n",
-    "    \"BAROQUE\",\n",
-    "    \"DISNEY\",\n",
-    "    \"HARD ROCK\",\n",
-    "]\n",
-    "predictions = [genre_list[p] for p in preds.tolist()]\n",
-    "df_out = pd.DataFrame()\n",
-    "df_out[\"ID\"] = final_test[\"test_labels\"]\n",
-    "df_out[\"genre\"] = predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_out.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_out.to_csv(\"./NN_music_genre.csv\", index=False)"
    ]
   }
  ],
