Update to Readme and typo fix

--- a/pytorch-nn-multiclass-sagemaker.ipynb
+++ b/pytorch-nn-multiclass-sagemaker.ipynb
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download the above two files and the requirements.txt file and create a tar.gz and upload that to the S3 location reference by the variable **s3_source_dir**"
+    "Download the above two files and the requirements.txt file and create a tar.gz and upload that to S3"
    ]
   },
   {
