fixed broken links

--- a/pytorch-nn-multiclass-classifier-sagemaker.ipynb
+++ b/pytorch-nn-multiclass-classifier-sagemaker.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Review required and redundant librarires & imports"
+    "## Step 2: Review required and redundant libraries & imports"
    ]
   },
   {
@@ -297,8 +297,8 @@
    "metadata": {},
    "source": [
     "Since Sagemaker training container will run outside of this notebook, the model definition and training code will need to be accessible via separate files:\n",
-    "- [pytorch_model_def.py](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/code/pytorch_model_def.py)\n",
-    "- [train_deploy_pytorch_without_dependencies.py](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/code/train_deploy_pytorch_without_dependencies.py)  \n",
+    "- [pytorch_model_def.py](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/pytorch_script/pytorch_model_def.py)\n",
+    "- [train_deploy_pytorch_without_dependencies.py](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/pytorch_script/train_deploy_pytorch_without_dependencies.py)  \n",
     "  \n",
     "Sagemaker training expect the above files along with any requirements.txt file in a single tar.gz archive. Having this tar.gz file in S3 means that I can now create a standarized CI/CD pipeline (MLOps), that will create a new tar.gz file each time I push a commit to any of the 3 files into my repo  \n"
    ]
@@ -340,7 +340,7 @@
    "metadata": {},
    "source": [
     "### Neural net\n",
-    "I will put the model definition in another separate file named: [**pytorch_model_def.py**](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/code/pytorch_model_def.py) so I will not need the model definition in the notebook anymore  \n",
+    "I will put the model definition in another separate file named: [**pytorch_model_def.py**](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/pytorch_script/pytorch_model_def.py) so I will not need the model definition in the notebook anymore  \n",
     "*(showing commented out code to make the comparison with previous - non-Sagemaker notebook easier)*"
    ]
   },
@@ -364,7 +364,7 @@
    "metadata": {},
    "source": [
     "### Model accuracy function\n",
-    "I will merge this function into the separate file I will create for training named: [**train_deploy_pytorch_without_dependencies.py**](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/code/train_deploy_pytorch_without_dependencies.py)  \n",
+    "I will merge this function into the separate file I will create for training named: [**train_deploy_pytorch_without_dependencies.py**](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/pytorch_script/train_deploy_pytorch_without_dependencies.py)  \n",
     "*(showing commented out code to make the comparison with previous - non-Sagemaker notebook easier)*"
    ]
   },
@@ -398,7 +398,7 @@
    "metadata": {},
    "source": [
     "### Training\n",
-    "I will create a separate file named [**train_deploy_pytorch_without_dependencies.py**](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/code/train_deploy_pytorch_without_dependencies.py), that will contain the training code below  \n",
+    "I will create a separate file named [**train_deploy_pytorch_without_dependencies.py**](https://github.com/sjaffry/multiclass-classifier-pytorch-nn/blob/main/pytorch_script/train_deploy_pytorch_without_dependencies.py), that will contain the training code below  \n",
     "*(showing commented out code to make the comparison with previous - non-Sagemaker notebook easier)*"
    ]
   },
