cleanup redundant files

--- a/pytorch-nn-multiclass-classifier-sagemaker.ipynb
+++ b/pytorch-nn-multiclass-classifier-sagemaker.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "Before I started refactoring my code using the example notebooks in Sagemaker examoles, I wan to understand how the \"magic\" works behind the Sagemaker PyTorch SDK. So this is what I discovered:  \n",
     "\n",
-    "[ARCHITECTURE DIAGRAM]"
+    "![Sagemaker PyTorch SDK](images/img_0002.png)"
    ]
   },
   {
@@ -318,7 +318,15 @@
    "source": [
     "!wget -q https://raw.githubusercontent.com/sjaffry/multiclass-classifier-pytorch-nn/main/pytorch_script/pytorch_model_def.py\n",
     "!wget -q https://raw.githubusercontent.com/sjaffry/multiclass-classifier-pytorch-nn/main/pytorch_script/train_deploy_pytorch_without_dependencies.py\n",
-    "!wget -q https://raw.githubusercontent.com/sjaffry/multiclass-classifier-pytorch-nn/main/pytorch_script/requirements.txt\n",
+    "!wget -q https://raw.githubusercontent.com/sjaffry/multiclass-classifier-pytorch-nn/main/pytorch_script/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!tar -czf pytorch_script.tar.gz pytorch_model_def.py train_deploy_pytorch_without_dependencies.py requirements.txt"
    ]
   },
@@ -514,7 +522,7 @@
    "metadata": {},
    "source": [
     "### Start model training as a Sagemaker training job\n",
-    "I'm using the Sagemaker PyTorch SDK to create a training job within Sagemaker Training. It will:\n",
+    "I'm using the Sagemaker PyTorch SDK to create a training job within Sagemaker Training. The PyTorch SDK will do the following:\n",
     "- create a new instance as per the parameter specification\n",
     "- download your training and validation data from S3 (numpy_train_s3_uri, numpy_test_s3_uri)\n",
     "- download your custom training code and model definition from S3 (pytorch_script.tar.gz)\n",
